# kangaroo

./: .gitignore  LICENSE  README.md
backend/: main.py  pyproject.toml  test.db
backend/app/: config.py  database.py  server.py
backend/app/api/: router.py
backend/app/common/: logger.py  resp.py  snowflake.py
backend/app/core/: cache.py  logger.py  redis.py  security.py
backend/app/exceptions/: soft_delete.py
backend/app/models/: base.py  user.py
backend/app/utils/: base58_utils.py  time_utils.py
backend/migrations/: env.py
backend/migrations/versions/: 51b3d8c15b54_.py  926501488256_.py
backend/tests/: test_base58_utils.py
frontend/: next.config.js  package.json  tsconfig.json
frontend/app/: layout.tsx
frontend/app/blog/: page.tsx
frontend/components/markdown/: markdownText.tsx  pre.tsx
frontend/styles/: github-hljs.css  github-markdown.css
