[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["simon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
base58 = "^2.1.1"
asgi-correlation-id = "^4.3.1"
bcrypt = "^4.1.3"
redis = "^5.0.4"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pytest = "^8.2.1"
ipython = "^8.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
